--- a/style.css
+++ b/style.css
@@ -98,10 +98,25 @@ header {
   justify-content: flex-end;
   gap: 20px;
 }
+
+.right-header-mobile{
+  display: none;
+}
 .right-header a {
   cursor: pointer;
   text-decoration: none;
   color: white;
+}
+@media (max-width: 840px) {
+  .right-header {
+    display: none;
+  }
+  .right-header-mobile {
+    display: flex;
+    justify-content: flex-end;
+    gap: 20px;
+    cursor: pointer;
+  }
 }
 
 /* entry section*/
@@ -155,6 +170,30 @@ header {
 
 /* experience section */
 
+.experience{
+  display: grid;
+  place-items: center;
+  padding: var(--padding)
+}
+.experience h3{
+  color: white;
+  font-size: 2.5rem;
+}
+.experience-item{
+  display: grid;
+  place-items: center;
+  gap: 10px;
+  color: white;
+  text-align: center;
+}
+.experience-item p{
+  font-size: 1.1rem;
+}
+.experience-item span{
+  font-size: 1.3rem;
+  font-weight: bold;
+}
+
 /* skills section */
 .skills {
   padding: var(--padding);
@@ -181,12 +220,53 @@ header {
   padding: var(--padding);
   display: grid;
   justify-items: center;
+  gap: 30px;
 }
 .repos h3{
   font-size: 2.5rem;
   color: white;
 }
-
+.repo-item{
+  background: white;
+  border: 1px solid white;
+  padding: 20px;
+  width: 250px;
+  display: grid;
+  justify-items: start;
+  gap: 10px;
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
+.top-of-repo{
+  display: grid;
+  grid-auto-flow: column;
+  place-items: center;
+  gap: 10px;
+}
+.circle{
+  width: 12px;
+  height: 12px;
+  border-radius: 100%;
+  background-color: orange;
+  display: inline-block;
+  top: 1px;
+  position: relative;
+}
+.bottom-of-repo{
+  display: grid;
+  grid-auto-flow: column;
+  gap: 10px;
+  place-items: center;
+}
+.check-more{
+  padding: 15px;
+  width: 200px;
+  cursor: pointer;
+  font-size: 1.05rem;
+  transition: 0.2s ease-in-out;
+}
+.check-more:hover {
+  transform: scale(1.3);
+}
 /* socials section */
 
 .social-networks{
