--- a/style.css
+++ b/style.css
@@ -88,6 +88,31 @@ body.active{
   background-color: white;
 }
 
+.active section p{
+  color:#1f2937 !important; 
+}
+
+.active section h1{
+  color:#1f2937 !important; 
+}
+
+.active section h2{
+  color:#1f2937 !important; 
+}
+
+.active section h3{
+  color:#1f2937 !important; 
+}
+
+.active footer a span{
+  color:#1f2937 !important; 
+}
+
+.active header  span{
+  color:#1f2937 !important; 
+}
+
+
 
   .right-header {
     display: flex;
